# codi-replication

./: .gitignore  README.md  codi_model.py  codi_model_freeze.py  configs.py  data.py  pyproject.toml  run_train.py  train.py  trainer.py
configs/: config.yaml
